--- a/docs/HOWTOS.tex
+++ b/docs/HOWTOS.tex
@@ -1,23 +1,23 @@
-# Initializing `Atoms`
+\subsection*{Initializing \jlcode{Atoms}}
 
 From xyz file: supply the path to xyz file as string and
 set the lattice vectors:
 
-```julia
+\begin{juliacode}
 atoms = Atoms(xyz_file="file.xyz", LatVecs=gen_lattice_sc(16.0))
-```
+\end{juliacode}
 
 In extended xyz file, the lattice vectors information is included
 (along with several others information, if any):
 
-```julia
+\begin{juliacode}
 atoms = Atoms(ext_xyz_file="file.xyz")
-```
+\end{juliacode}
 
-For crystalline systems, using keyword argument `xyz_string_frac`
+For crystalline systems, using keyword argument \jlcode{xyz_string_frac}
 is sometimes convenient:
 
-```julia
+\begin{juliacode}
 atoms = Atoms(xyz_string_frac=
         """
         2
@@ -26,54 +26,52 @@ atoms = Atoms(xyz_string_frac=
         Si  0.25  0.25  0.25
         """, in_bohr=true,
         LatVecs=gen_lattice_fcc(10.2631))
-```
+\end{juliacode}
 
-**IMPORTANT**
-We need to be careful to also specify `in_bohr` keyword to get
-the correct coordinates in bohr (which is used internally in `PWDFT.jl`).
-
+\textbf{IMPORTANT} We need to be careful to also specify \jlcode{in_bohr} keyword to get
+the correct coordinates in bohr (which is used internally in \jlcode{PWDFT.jl}).
 
 
-# Referring or including files in `sandbox` (or other dirs in `PWDFT.jl`)
 
-```julia
+\subsection*{Referring or including files in \jlcode{sandbox} (or other dirs in \jlcode{PWDFT.jl})}
+
+\begin{juliacode}
 using PWDFT
 const DIR_PWDFT = joinpath(dirname(pathof(PWDFT)),"..")
 const DIR_PSP = joinpath(DIR_PWDFT,"pseudopotentials","pade_gth")
 const DIR_STRUCTURES = joinpath(DIR_PWDFT, "structures")
 
 pspfiles = [joinpath(DIR_PSP,"Ag-q11.gth")]
-```
+\end{juliacode}
 
 
-# Generating lattice vectors
+\subsection*{Generating lattice vectors}
 
 Lattice vectors are simply 3x3 array. We can set it manually or use
-one of functions defined in
-[gen_lattice_pwscf.jl](../src/gen_lattice_pwscf.jl)
+one of functions defined in \jlcode{gen_lattice_pwscf.jl}.
 for generating lattice vectors for Bravais lattices that used
 in Quantum ESPRESSO's PWSCF.
 
-# Using Babel to generate xyz file from SMILES
+\subsection*{Using Babel to generate xyz file from SMILES}
 
-```
+\begin{textcode}
 babel file.smi file.sdf
 babel file.sdf file.xyz
-```
+\end{textcode}
 
-Use `babel -h` to autogenerate hydrogens.
+Use \myverbcode{babel -h} to autogenerate hydrogens.
 
 
 
-# Setting up pseudopotentials
+\subsection*{Setting up pseudopotentials}
 
-One can use the function `get_default_psp(::Atoms)` to get default
-pseudopotentials set for a given instance of `Atoms`.
+One can use the function \jlcode{get_default_psp(::Atoms)} to get default
+pseudopotentials set for a given instance of \jlcode{Atoms}.
 
-Currently, it is not part of main `PWDFT.jl` package. It is located
-under `sandbox` subdirectory of `PWDFT.jl` distribution.
+Currently, it is not part of main \jlcode{PWDFT.jl} package. It is located
+under \myverbcode{sandbox} subdirectory of \jlcode{PWDFT.jl} distribution.
 
-```julia
+\begin{juliacode}
 using PWDFT
 
 DIR_PWDFT = jointpath(dirname(pathof(PWDFT)),"..")
@@ -81,52 +79,49 @@ include(jointpath(DIRPWDFT,"sandbox","get_default_psp.jl"))
 
 atoms = Atoms(ext_xyz_file="atoms.xyz")
 pspfiles = get_default_psp(atoms)
-```
+\end{juliacode}
 
-Alternatively, one can set `pspfiles` manually because it is simply
-an array of `String`:
-```julia
+Alternatively, one can set \myverbcode{pspfiles} manually because it is simply
+an array of \jlcode{String}:
+\begin{juliacode}
 pspfiles = ["Al-q3.gth", "O-q6.gth"]
-```
+\end{juliacode}
 
-**IMPORTANT** Be careful to set the order of species to be same as
-`atoms.SpeciesSymbols`. For example, if
-```julia
+\textbf{IMPORTANT} Be careful to set the order of species to be same as
+\jlcode{atoms.SpeciesSymbols}. For example, if
+\begin{juliacode}
 atoms.SpeciesSymbols = ["Al", "O", "H"]
-```
+\end{juliacode}
 then
-```julia
+\begin{juliacode}
 pspfiles = ["Al-q3.gth", "O-q6.gth", "H-q1.gth"]
-```
+\end{juliacode}
 
 
-
-
-# Calculating electron density
+\subsection*{Calculating electron density}
 
 Several ways:
-
-```julia
+\begin{juliacode}
 Rhoe = calc_rhoe( Nelectrons, pw, Focc, psiks, Nspin )
 # or
 Rhoe = calc_rhoe( Ham, psiks )
 # or
 calc_rhoe!( Ham, psiks, Rhoe )
-```
+\end{juliacode}
 
-# Read and write array (binary file)
+\subsection*{Read and write array (binary file)}
 
 Write to binary files:
-```julia
+\begin{juliacode}
 for ikspin = 1:Nkpt*Nspin
     wfc_file = open("WFC_ikspin_"*string(ikspin)*".data","w")
     write( wfc_file, psiks[ikspin] )
     close( wfc_file )
 end
-```
+\end{juliacode}
 
 Read from binary files:
-```julia
+\begin{juliacode}
 psiks = BlochWavefunc(undef,Nkpt)
 for ispin = 1:Nspin
 for ik = 1:Nkpt
@@ -138,16 +133,16 @@ for ik = 1:Nkpt
     close( wfc_file )
 end
 end
-```
+\end{juliacode}
 
 
 
 
-# Subspace rotation
+\subsection*{Subspace rotation}
 
 In case need sorting:
 
-```julia
+\begin{juliacode}
 Hr = psiks[ikspin]' * op_H( Ham, psiks[ikspin] )
 evals, evecs = eigen(Hr)
 evals = real(evals[:])
@@ -160,6 +155,6 @@ Ham.electrons.ebands[:,ikspin] = evals[idx_sorted]
 
 # and rotate
 psiks[ikspin] = psiks[ikspin]*evecs[:,idx_sorted]
-```
+\end{juliacode}
 
 
