--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -46,6 +46,8 @@
 
 \section{Overview}
 
+\textbf{This document is a work in progress}
+
 \textsf{PWDFT.jl} is a Julia package to carry out (electronic)
 density functional theory calculations on materials.
 It uses plane wave basis sets to discretize Kohn-Sham equations.
@@ -646,6 +648,11 @@ Presently only working for systems with band gap (insulators and semiconductors)
 
 
 \section*{Status}
+
+\textbf{29 July 2019} Total energy results are now similar to ABINIT
+and Quantum ESPRESSO. A rather comprehensive test has been added
+for SCF and Emin PCG for several simple systems.
+
 
 \textbf{28 May 2018} The following features are working now:
 \begin{itemize}
