--- a/docs/PRESE_01/PWDFTIntro.tex
+++ b/docs/PRESE_01/PWDFTIntro.tex
@@ -1,5 +1,16 @@
 \documentclass[english,9pt]{beamer}
 
+\usepackage{amsmath} % load this before unicode-math
+\usepackage{amssymb}
+%\usepackage{unicode-math}
+
+\usepackage{fontspec}
+\setmonofont{DejaVu Sans Mono}
+%\setmathfont{STIXMath}
+%\setmathfont{TeX Gyre Termes Math}
+
+\usefonttheme[onlymath]{serif}
+
 \setlength{\parskip}{\smallskipamount}
 \setlength{\parindent}{0pt}
 
@@ -10,10 +21,13 @@
 \usepackage{braket}
 
 \usepackage{minted}
-\newminted{julia}{breaklines,fontsize=\footnotesize,texcomments=true}
-\newminted{python}{breaklines,fontsize=\footnotesize,texcomments=true}
-\newminted{bash}{breaklines,fontsize=\footnotesize,texcomments=true}
-\newminted{text}{breaklines,fontsize=\footnotesize,texcomments=true}
+\newminted{julia}{breaklines,fontsize=\scriptsize,texcomments=true}
+\newminted{python}{breaklines,fontsize=\scriptsize,texcomments=true}
+\newminted{bash}{breaklines,fontsize=\scriptsize,texcomments=true}
+\newminted{text}{breaklines,fontsize=\scriptsize,texcomments=true}
+
+\newcommand{\txtinline}[1]{\mintinline[fontsize=\scriptsize]{text}{#1}}
+\newcommand{\jlinline}[1]{\mintinline[fontsize=\scriptsize]{julia}{#1}}
 
 \definecolor{mintedbg}{rgb}{0.95,0.95,0.95}
 \usepackage{mdframed}
@@ -57,7 +71,6 @@ Institut Teknologi Bandung
 \frametitle{Software packages for DFT calculations}
 
 There are a lot of software packages for DFT calculations, for examples:
-
 \begin{itemize}
 \item Quantum ESPRESSO
 \item VASP
@@ -66,8 +79,16 @@ There are a lot of software packages for DFT calculations, for examples:
 \item NWchem
 \end{itemize}
 
+Test math:
+\begin{equation}
+\alpha + \beta \oint
+\end{equation}
+
+
 More extensive list:
+{\scriptsize
 \url{https://en.wikipedia.org/wiki/List_of_quantum_chemistry_and_solid-state_physics_software}
+}
 
 \end{frame}
 
@@ -165,82 +186,15 @@ for molecular and crystalline systems.
 
 \end{frame}
 
-
-\begin{frame}[fragile]
-\frametitle{Example: hydrogen molecule in a box}
-
-\begin{juliacode}
-using PWDFT
-atoms = Atoms( xyz_file="H2.xyz",
-               LatVecs=gen_lattice_sc(16.0) )
-pspfiles = ["../pseudopotentials/pade_gth/H-q1.gth"]
-ecutwfc = 15.0
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc )
-KS_solve_SCF!( Ham )
-\end{juliacode}
-
+\begin{frame}[plain]
+\begin{center}
+\Huge{Examples}
+\end{center}
 \end{frame}
 
+\input{Examples}
 
-\begin{frame}[fragile]
-\frametitle{Converged Kohn-Sham energy components}
-
-\begin{columns}
-
-\begin{column}{0.45\textwidth}
-PWDFT.jl's result:
-\begin{textcode}
--------------------------
-Final Kohn-Sham energies:
--------------------------
-
-Kinetic    energy:       1.0100082964
-Ps_loc     energy:      -2.7127874818
-Ps_nloc    energy:       0.0000000000
-Hartree    energy:       0.9015209348
-XC         energy:      -0.6314251867
-PspCore    energy:      -0.0000012675
--------------------------------------
-Electronic energy:      -1.4326847047
-NN         energy:       0.3131700043
--------------------------------------
-Total      energy:      -1.1195147004
-\end{textcode}
-\end{column}
-
-\begin{column}{0.55\textwidth}
-
-ABINIT's result:
-\begin{textcode}
-Components of total free energy (in Hartree) :
-
-   Kinetic energy  =  1.01004059294567E+00
-   Hartree energy  =  9.01545039301481E-01
-   XC energy       = -6.31436384237843E-01
-   Ewald energy    =  3.13170052325859E-01
-   PspCore energy  = -1.26742500464741E-06
-   Loc. psp. energy= -2.71283243086241E+00
-   NL   psp  energy=  0.00000000000000E+00
-   >>>>>>>>> Etotal= -1.11951439795224E+00
-\end{textcode}
-\end{column}
-
-\end{columns}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{SCF options}
-
-Various mixing methods
-
-Various diagonalization schemes
-
-ChebySCF
-
-\end{frame}
-
+\input{SCF_related}
 
 \begin{frame}
 \frametitle{Direct energy minimization}
@@ -248,6 +202,8 @@ ChebySCF
 For systems with band gaps:
 
 Conjugate gradient
+
+Direct minimization
 
 \end{frame}
 
